--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <div class="bottom-container">
   <a class="footer-link" href="https://www.instagram.com/iamsbundela/">Instagram</a>
-  <a class="footer-link" href="https://twitter.com/iamsbundela/">Twitter</a>
+  <a class="footer-link" href="https://twitter.com/iam_sbundela">Twitter</a>
   <a class="footer-link" href="https://www.linkedin.com/in/shubham-b-b82844125/">LinkedIn</a>
   <a class="footer-link" href="https://github.com/iamsbundela">Github</a>
   <p class="footer-text">© 2018 Shubham Bundela.</p>
